Fixed some alignment issues and added a navbar.

--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,56 @@ body {
   margin: auto;
 }
 
+.navbar {
+  width: 100%;
+  /* background-color: var(--alice-blue); */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 20px;
+}
+
+.logo {
+  height: 120px;
+}
+
+.nav-list {
+  display: flex;
+  flex-basis: 50%;
+  justify-content: space-around;
+  list-style-type: none;
+}
+
+.list-item {
+  font-size: 18px;
+}
+
+.nav-list a {
+  text-decoration: none;
+  transition: 0.2s ease;
+}
+
+.nav-list a:hover {
+  color: goldenrod;
+  font-size: 24px;
+  transition: 0.2s ease;
+}
+
+.menu {
+  display: none;
+}
+
+.menu-line {
+  width: 20px;
+  height: 3px;
+  background-color: var(--french-blue);
+  margin-bottom: 5px;
+}
+
+.title {
+  margin: 1.3em;
+}
+
 .title {
   color: darkslategrey;
   font-size: 2em;
@@ -99,14 +149,14 @@ select {
 button {
   margin-top: 1rem;
   /* display: block; */
-  width: 20%;
+  width: 30%;
   background-color: var(--green-blue-crayola);
   color: var(--white);
-  padding: 1em;
+  padding: 0.5em;
   text-align: center;
   text-decoration: none;
   font-size: 18px;
-  border-radius: 8px;
+  border-radius: 15px;
   cursor: pointer;
   -webkit-transition-duration: 0.2s; /* Safari */
   transition-duration: 0.2s;
